fix(borders): update borders for high contrast mode
Update the borders for buttons and input fields to appear in high contrast mode on Edge in Windows 10.

fixes https://github.com/patternfly/patternfly-next/issues/286

--- a/src/patternfly/components/Button/styles.scss
+++ b/src/patternfly/components/Button/styles.scss
@@ -13,6 +13,7 @@
   --pf-c-button--BoxShadowSpread: var(--pf-global--BorderWidth--sm);
   --pf-c-button--Color: var(--pf-global--primary-color);
   --pf-c-button--BorderRadius: var(--pf-global--BorderRadius);
+  --pf-c-button--BorderWidth: var(--pf-global--BorderWidth--sm);
 
   // Hover state variables
   --pf-c-button--hover--Color: var(--pf-global--primary-color--200);
@@ -122,7 +123,7 @@
   text-align: center;
   white-space: nowrap;
   background-color: var(--pf-c-button--BackgroundColor);
-  border: 0;
+  border: var(--pf-c-button--BorderWidth) solid transparent;
   border-radius: var(--pf-c-button--BorderRadius);
   box-shadow: inset 0 0 0 var(--pf-c-button--BoxShadowSpread) var(--pf-c-button--BoxShadowColor);
 
@@ -161,6 +162,7 @@
   &.pf-m-primary {
     color: var(--pf-c-button--m-primary--Color);
     background-color: var(--pf-c-button--m-primary--BackgroundColor);
+    border: var(--pf-c-button--BorderWidth) solid transparent;
     box-shadow: inset 0 0 0 var(--pf-c-button--BoxShadowSpread) var(--pf-c-button--m-primary--BoxShadowColor);
 
     &:hover,
@@ -189,6 +191,7 @@
   &.pf-m-secondary {
     color: var(--pf-c-button--m-secondary--Color);
     background-color: var(--pf-c-button--m-secondary--BackgroundColor);
+    border: var(--pf-c-button--BorderWidth) solid transparent;
     box-shadow: inset 0 0 0 var(--pf-c-button--BoxShadowSpread) var(--pf-c-button--m-secondary--BoxShadowColor);
 
     &:hover,
@@ -217,6 +220,7 @@
   &.pf-m-tertiary {
     color: var(--pf-c-button--m-tertiary--Color);
     background-color: var(--pf-c-button--m-tertiary--BackgroundColor);
+    border: var(--pf-c-button--BorderWidth) solid transparent;
     box-shadow: inset 0 0 0 var(--pf-c-button--BoxShadowSpread) var(--pf-c-button--m-tertiary--BoxShadowColor);
 
     &:hover,
@@ -245,6 +249,7 @@
   &.pf-m-danger {
     color: var(--pf-c-button--m-danger--Color);
     background-color: var(--pf-c-button--m-danger--BackgroundColor);
+    border: var(--pf-c-button--BorderWidth) solid transparent;
     box-shadow: inset 0 0 0 var(--pf-c-button--BoxShadowSpread) var(--pf-c-button--m-danger--BoxShadowColor);
 
     &:hover,
